# qcp-project

./: .editorconfig  .gitignore  CMakeLists.txt  PROTOCOL.md  README.md
benchmarks/: bench.cpp
demo/: ccnots16.in  ccnots8.in  cnots16.in  entangle.in  gen.py  grovers.in  hadamards16.in  hadamards8.in
docs/: CMakeLists.txt
docs/html/: annotated.html  classes.html  classqc_1_1QCircuit-members.html  classqc_1_1QCircuit.html  classqc_1_1QGate-members.html  classqc_1_1QGate.html  classqc_1_1QGate__coll__graph.map  classqc_1_1QGate__coll__graph.md5  classqc_1_1QRegister-members.html  classqc_1_1QRegister.html  classqc_1_1QRegisterImpl-members.html  classqc_1_1QRegisterImpl.html  classqc_1_1QRegisterImpl__coll__graph.map  classqc_1_1QRegisterImpl__coll__graph.md5  classqc_1_1QRegisterImpl__inherit__graph.md5  classqc_1_1QRegister__inherit__graph.map  classqc_1_1QRegister__inherit__graph.md5  common_8hpp.html  common_8hpp__dep__incl.map  common_8hpp__dep__incl.md5  common_8hpp__incl.map  common_8hpp__incl.md5  common_8hpp_source.html  dense__matrix_8hpp.html  dense__matrix_8hpp__dep__incl.map  dense__matrix_8hpp__dep__incl.md5  dense__matrix_8hpp__incl.map  dense__matrix_8hpp__incl.md5  dense__matrix_8hpp_source.html  dir_000000_000002.html  dir_4471931dacf2c5c9cea9bf7c1a746a06.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_d365e15d984c8d0205117ee0c40d6716.html  dir_d365e15d984c8d0205117ee0c40d6716_dep.map  dir_d365e15d984c8d0205117ee0c40d6716_dep.md5  files.html  functions.html  functions_func.html  (+76 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_a.js  all_b.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  files_4.js  functions_10.js  functions_11.js  functions_12.js  functions_14.js  functions_2.js  functions_3.js  functions_7.js  functions_8.js  functions_9.js  functions_b.js  functions_c.js  functions_d.js  functions_e.js  functions_f.js  searchdata.js  typedefs_0.js  typedefs_1.js  typedefs_2.js  typedefs_3.js  (+7 more)
drivers/algorithms/: grovers.cpp  qec.cpp  shors.cpp
drivers/cmd/: main.cpp
drivers/http/: main.cpp
frontend/: app.py  circuit.js  qbuilder.html  style.css
frontend/circuit/: __init__.py  circuit.py  operation.py  read.py
frontend/compile/: compile.py  template.html
frontend/static/: circuit.js  style.css
frontend/templates/: builder.html
src/: main.cpp  qcircuit.hpp  qcsim.cpp  qcsim.hpp  qgate.cpp  qgate.hpp  qgate.json  qreg.cpp  qreg.hpp
src/input/: input.hpp
src/numeric/: common.hpp  dense_matrix.hpp  numeric.cpp  numeric.hpp  sparse_matrix.hpp
tests/: numeric.cpp
